2011-06-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3328763 ] deactivateFilter() doesn't release CMPI object

2011-06-22 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, interopProvider.c, sfcBroker.c,
	test/TestProviders/tests/IndRetryTest.sh:
	[ 3274893 ] For SFCB 1.4, set SequenceIdentifier as described in DSP1054 1.2.

2011-06-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* mlog.c:
	[ 3323419 ] sfcb local interface causes zombie/defunct client processes
	(patch by Chris Poblete)

	* brokerUpc.c:
	[ 3324578 ] getInstance() up call does not close provider context
	(patch by Santosh Bidaralli)

2011-06-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* trace.c:
	[ 3324265 ] _sfcb_trace may deref NULL pointers

	* support.c:
	[ 3324255 ] Unnecessary NULL check in __cleanup_mt()

	* objectpath.c:
	[ 3324198 ] getObjectPath() may deref a NULL pointer

	* objectImpl.c:
	[ 3324192 ] Erroneous condition in loop in objectImpl:locateParameter()

	* interopServerProvider.c:
	[ 3324168 ] gatherNameSpacesData() may closedir() a NULL pointer

	* indCIMXMLHandler.c:
	[ 3324131 ] indCIMXMLHandler may return uninitialized CMPIStatus

	* providerDrv.c:
	[ 3324214 ] Remove dead code from providerDrv:loadProvider()

	* httpAdapter.c:
	[ 3323427 ] Unnecessary NULL check in httpAdapter

	* control.c:
	[ 3323422 ] Unnecessary NULL check in control.c

2011-06-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3314762 ] Memory leak in method invoke using SFCB local interface
	(patch by Chris Poblete)

	* control.c:
	[ 3165732 ] Add ability for client library to specify configuration file
	(patch by Josef Moellers)

2011-06-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, cimcClientSfcbLocal.c:
	[ 3314383 ] Memory leak in CimResource_Enumerate_EP
	(patch by Chris Poblete)

	* Makefile.am
	[ 3047562 ] [patch] Create bzip2 tarballs on "make dist"
	(patch by Klaus Kampf)
